# synthetic_data_generation

./: setup.cfg  setup.py
src/synthesis/evaluation/: __init__.py  _base.py  efficacy.py  evaluator.py  experiment.py  metrics.py  privacy.py  visual.py
src/synthesis/synthesizers/: __init__.py  _base.py  contingency.py  marginal.py  privbayes.py  utils.py
src/synthesis/transformers/: __init__.py  _base.py  deidentification.py  generalization.py  sequence.py
tests/transformers/: test_generalization.py
